--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "shoedog",
+  "name": "webtools",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,16 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "12.3.0",
+    "@tanstack/react-query": "~4.3.4",
+    "axios": "~1.1.2",
+    "next": "~12.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
   "devDependencies": {
+    "@fullstacksjs/eslint-config": "8.7.2",
     "@types/node": "18.7.16",
     "@types/react": "18.0.19",
     "@types/react-dom": "18.0.6",
-    "eslint": "8.23.0",
-    "eslint-config-next": "12.3.0",
-    "typescript": "4.8.3"
+    "eslint": "8.25.0",
+    "eslint-config-next": "12.3.1",
+    "typescript": "4.8.4"
   }
 }
