--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@tanstack/react-query": "^4.10.3",
+    "@tanstack/react-query": "4.10.3",
     "@tanstack/react-query-devtools": "4.11.0",
-    "axios": "1.1.2",
+    "axios": "0.27.2",
     "next": "12.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0"
