--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "next": "12.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-icons": "4.6.0"
+    "react-icons": "4.6.0",
+    "sharp": "^0.31.1"
   },
   "devDependencies": {
     "@fullstacksjs/eslint-config": "8.7.2",
