--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "4.6.0",
-    "sharp": "^0.31.1"
+    "react-toastify": "9.1.1",
+    "sharp": "0.31.1",
+    "slugify": "1.6.5"
   },
   "devDependencies": {
     "@fullstacksjs/eslint-config": "8.7.2",
