--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "eslint": "8.25.0",
     "eslint-config-next": "12.3.1",
     "postcss": "^8.4.18",
+    "prettier": "^2.8.1",
+    "prettier-plugin-tailwindcss": "^0.2.1",
     "tailwindcss": "^3.1.8",
     "typescript": "4.8.4"
   }
